<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartUpActivity" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtViewResultInstruction" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_gender" />

            <RadioGroup android:id="@+id/radioGroup" >
                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_male" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_female" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_age" />

            <EditText
                android:id="@+id/editTxtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtViewEthnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ethnic" />

            <Spinner
                android:id="@+id/spinnerEthnic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:prompt="@string/txt_ethnic_prompt"
                android:spinnerMode="dialog" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtViewOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_occupation" />

            <EditText
                android:id="@+id/editTxtOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_skip" 
                android:onClick="onClickSkip"/>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit" 
                android:onClick="onClickSubmit"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/txtViewResultInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tableLayout1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tableLayout1"
        android:layout_marginBottom="10dp"
        android:text="@string/txt_startup"
        android:textSize="18sp" />

</RelativeLayout>