<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/title_main"
        android:textColor="@color/GhostWhite"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="onClickTake"
        android:text="@string/btn_start_text"
        android:textAlignment="center"
        android:textColor="@color/btn_text_color" />

    <Button
        android:id="@+id/btnAccredition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTakePhoto"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAccredition"
        android:text="@string/btn_accredition"
        android:textColor="@color/btn_text_color" />

</RelativeLayout>